--- a/vok-web-api/project.json
+++ b/vok-web-api/project.json
@@ -10,7 +10,11 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
-    "Microsoft.Extensions.Configuration.Json": "1.1.0"
+    "Microsoft.Extensions.Configuration.Json": "1.1.0",
+    "Dapper": "1.50.2",
+    "Microsoft.AspNetCore.Mvc": "1.1.0",
+    "Swashbuckle": "6.0.0-beta902",
+    "Microsoft.Azure.KeyVault.Core": "2.0.4"
   },
 
   "tools": {
@@ -40,7 +44,8 @@
   "publishOptions": {
     "include": [
       "wwwroot",
-      "web.config"
+      "web.config",
+      "appsettings.json"
     ]
   },
 
