--- a/vok-web-api/project.json
+++ b/vok-web-api/project.json
@@ -14,7 +14,8 @@
     "Dapper": "1.50.2",
     "Microsoft.AspNetCore.Mvc": "1.1.0",
     "Swashbuckle": "6.0.0-beta902",
-    "Microsoft.Azure.KeyVault.Core": "2.0.4"
+    "Microsoft.Azure.KeyVault.Core": "2.0.4",
+    "Microsoft.AspNetCore.Cors": "1.1.0"
   },
 
   "tools": {
