Add second web api and Kendo

--- a/vok-web-client/package.json
+++ b/vok-web-client/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
+    "@progress/kendo-angular-grid": "^0.7.0",
+    "@progress/kendo-data-query": "^0.3.1",
+    "@telerik/kendo-theme-default": "^1.32.1",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
